// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> Match snapshot of component <App/> in initial mode 1`] = `
<div>
  <div
    class="guided-answer"
  >
    <div
      class="guided-answer__header"
      style="padding-bottom: 20px;"
    >
      <div
        class="guided-answer__header__sub"
      >
        <div
          class="guided-answer__header__logoAndTitle"
        >
          <span
            id="sap-logo"
          >
            <svg />
          </span>
          <h1
            class="guided-answer__header__title"
          >
            Guided Answers
          </h1>
        </div>
        <div
          class="guided-answer__header__searchField"
        >
          <div>
            SearchField
          </div>
          <div
            id="filters"
          >
            <div
              class="ms-FocusZone css-109"
              data-focuszone-id="FocusZone9"
              style="display: flex;"
            >
              <button
                aria-disabled="true"
                class="ms-Button ms-Button--icon is-disabled filter-button root-110"
                data-is-focusable="false"
                disabled=""
                id="filter-products"
                tabindex="-1"
                title="Filter Products"
                type="button"
              >
                <span
                  class="ms-Button-flexContainer flexContainer-111"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden="true"
                    class="ms-Icon root-101 ms-Button-icon icon-113"
                    data-icon-name="Table"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M1,16 C0.44771525,16 0,15.5522847 0,15 L0,1 C0,0.44771525 0.44771525,0 1,0 L15,0 C15.5522847,0 16,0.44771525 16,1 L16,15 C16,15.5522847 15.5522847,16 15,16 L1,16 Z M5,11 L1,11 L1,15 L5,15 L5,11 Z M10,11 L6,11 L6,15 L10,15 L10,11 Z M15,11 L11,11 L11,15 L15,15 L15,11 Z M5,6 L1,6 L1,10 L5,10 L5,6 Z M10,6 L6,6 L6,10 L10,10 L10,6 Z M15,6 L11,6 L11,10 L15,10 L15,6 Z M5,1 L1,1 L1,5 L5,5 L5,1 Z M6,1 L6,5 L10,5 L10,1 L6,1 Z M11,5 L15,5 L15,1 L11,1 L11,5 Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                    </svg>
                  </i>
                </span>
              </button>
              <button
                aria-disabled="true"
                class="ms-Button ms-Button--icon is-disabled filter-button root-110"
                data-is-focusable="false"
                disabled=""
                id="filter-components"
                tabindex="-1"
                title="Filter Components"
                type="button"
              >
                <span
                  class="ms-Button-flexContainer flexContainer-111"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden="true"
                    class="ms-Icon root-101 ms-Button-icon icon-113"
                    data-icon-name="IdTag"
                  >
                    <svg
                      fill="none"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M6 2C6 1.44772 6.44775 1 7 1H9C9.55225 1 10 1.44772 10 2V3.58578C10 3.85101 9.89465 4.10535 9.70715 4.29289L8.70715 5.29289C8.31653 5.68342 7.68347 5.68342 7.29285 5.29289L6.29285 4.29289C6.10535 4.10535 6 3.85101 6 3.58578V2ZM7 2.5C7 2.22385 7.22388 2 7.5 2H8.5C8.77612 2 9 2.22385 9 2.5C9 2.77615 8.77612 3 8.5 3H7.5C7.22388 3 7 2.77615 7 2.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M5.04333 4H1C0.447754 4 0 4.44772 0 5V14C0 14.5523 0.447754 15 1 15H15C15.5522 15 16 14.5523 16 14V5C16 4.44772 15.5522 4 15 4H10.9567C10.8771 4.37594 10.6901 4.72412 10.4142 5H15V14H1V5H5.58582C5.30994 4.72412 5.12292 4.37594 5.04333 4Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M3 7C2.44775 7 2 7.44772 2 8V11C2 11.5523 2.44775 12 3 12H5C5.55225 12 6 11.5523 6 11V8C6 7.44772 5.55225 7 5 7H3ZM5 8H3V11H5V8Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M7 7.5C7 7.22385 7.22388 7 7.5 7H13.5C13.7761 7 14 7.22385 14 7.5C14 7.77615 13.7761 8 13.5 8H7.5C7.22388 8 7 7.77615 7 7.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        d="M7 9.5C7 9.22385 7.22388 9 7.5 9H13.5C13.7761 9 14 9.22385 14 9.5C14 9.77615 13.7761 10 13.5 10H7.5C7.22388 10 7 9.77615 7 9.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        d="M11 11.5C11 11.2239 11.2239 11 11.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H11.5C11.2239 12 11 11.7761 11 11.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                    </svg>
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
       
    </div>
    <main
      class="guided-answer__container"
      id="results-container"
    />
  </div>
</div>
`;

exports[`<App /> Match snapshot of component <App/> in loading mode 1`] = `
<div>
  <div
    class="guided-answer"
  >
    <div
      class="guided-answer__header"
      style="padding-bottom: 20px;"
    >
      <div
        class="guided-answer__header__sub"
      >
        <div
          class="guided-answer__header__logoAndTitle"
        >
          <span
            id="sap-logo"
          >
            <svg />
          </span>
          <h1
            class="guided-answer__header__title"
          >
            Guided Answers
          </h1>
        </div>
        <div
          class="guided-answer__header__searchField"
        >
          <div>
            SearchField
          </div>
          <div
            id="filters"
          >
            <div
              class="ms-FocusZone css-109"
              data-focuszone-id="FocusZone0"
              style="display: flex;"
            >
              <button
                aria-disabled="true"
                class="ms-Button ms-Button--icon is-disabled filter-button root-110"
                data-is-focusable="false"
                disabled=""
                id="filter-products"
                tabindex="-1"
                title="Filter Products"
                type="button"
              >
                <span
                  class="ms-Button-flexContainer flexContainer-111"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden="true"
                    class="ms-Icon root-101 ms-Button-icon icon-113"
                    data-icon-name="Table"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M1,16 C0.44771525,16 0,15.5522847 0,15 L0,1 C0,0.44771525 0.44771525,0 1,0 L15,0 C15.5522847,0 16,0.44771525 16,1 L16,15 C16,15.5522847 15.5522847,16 15,16 L1,16 Z M5,11 L1,11 L1,15 L5,15 L5,11 Z M10,11 L6,11 L6,15 L10,15 L10,11 Z M15,11 L11,11 L11,15 L15,15 L15,11 Z M5,6 L1,6 L1,10 L5,10 L5,6 Z M10,6 L6,6 L6,10 L10,10 L10,6 Z M15,6 L11,6 L11,10 L15,10 L15,6 Z M5,1 L1,1 L1,5 L5,5 L5,1 Z M6,1 L6,5 L10,5 L10,1 L6,1 Z M11,5 L15,5 L15,1 L11,1 L11,5 Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                    </svg>
                  </i>
                </span>
              </button>
              <button
                aria-disabled="true"
                class="ms-Button ms-Button--icon is-disabled filter-button root-110"
                data-is-focusable="false"
                disabled=""
                id="filter-components"
                tabindex="-1"
                title="Filter Components"
                type="button"
              >
                <span
                  class="ms-Button-flexContainer flexContainer-111"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden="true"
                    class="ms-Icon root-101 ms-Button-icon icon-113"
                    data-icon-name="IdTag"
                  >
                    <svg
                      fill="none"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M6 2C6 1.44772 6.44775 1 7 1H9C9.55225 1 10 1.44772 10 2V3.58578C10 3.85101 9.89465 4.10535 9.70715 4.29289L8.70715 5.29289C8.31653 5.68342 7.68347 5.68342 7.29285 5.29289L6.29285 4.29289C6.10535 4.10535 6 3.85101 6 3.58578V2ZM7 2.5C7 2.22385 7.22388 2 7.5 2H8.5C8.77612 2 9 2.22385 9 2.5C9 2.77615 8.77612 3 8.5 3H7.5C7.22388 3 7 2.77615 7 2.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M5.04333 4H1C0.447754 4 0 4.44772 0 5V14C0 14.5523 0.447754 15 1 15H15C15.5522 15 16 14.5523 16 14V5C16 4.44772 15.5522 4 15 4H10.9567C10.8771 4.37594 10.6901 4.72412 10.4142 5H15V14H1V5H5.58582C5.30994 4.72412 5.12292 4.37594 5.04333 4Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M3 7C2.44775 7 2 7.44772 2 8V11C2 11.5523 2.44775 12 3 12H5C5.55225 12 6 11.5523 6 11V8C6 7.44772 5.55225 7 5 7H3ZM5 8H3V11H5V8Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M7 7.5C7 7.22385 7.22388 7 7.5 7H13.5C13.7761 7 14 7.22385 14 7.5C14 7.77615 13.7761 8 13.5 8H7.5C7.22388 8 7 7.77615 7 7.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        d="M7 9.5C7 9.22385 7.22388 9 7.5 9H13.5C13.7761 9 14 9.22385 14 9.5C14 9.77615 13.7761 10 13.5 10H7.5C7.22388 10 7 9.77615 7 9.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        d="M11 11.5C11 11.2239 11.2239 11 11.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H11.5C11.2239 12 11 11.7761 11 11.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                    </svg>
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
       
    </div>
    <main
      class="guided-answer__container"
      id="results-container"
    >
      <div
        class="ms-Spinner root-126"
        id="loading-indicator"
      >
        <div
          class="ms-Spinner-circle ms-Spinner--large circle-127"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`<App /> Match snapshot of component <App/> with a guide selected 1`] = `
<div>
  <div
    class="guided-answer"
  >
    <div
      class="guided-answer__header"
      style="padding-bottom: 0px;"
    >
      <div
        class="ms-FocusZone css-109 guided-answer__header"
        data-focuszone-id="FocusZone28"
      >
        <div
          class="guided-answer__header__allAnswersButton"
        >
          <button
            class="guided-answer__header__navButtons home-icon"
            id="all-answers-button"
            tabindex="0"
            title="Home"
          >
            <svg
              class="guided-answer__header__navButtons__content"
              fill="currentColor"
              focusable="false"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M8.36 1.37l6.36 5.8-.71.71L13 6.964v6.526l-.5.5h-3l-.5-.5v-3.5H7v3.5l-.5.5h-3l-.5-.5V6.972L2 7.88l-.71-.71 6.35-5.8h.72zM4 6.063v6.927h2v-3.5l.5-.5h3l.5.5v3.5h2V6.057L8 2.43 4 6.063z"
                fill-rule="evenodd"
              />
            </svg>
             
            <span
              class="guided-answer__header__navButtons__content__text text-underline"
            >
              Home
            </span>
          </button>
        </div>
        <div
          class="guided-answer__header__back-restart-buttons"
        >
          <button
            class="guided-answer__header__navButtons"
            id="back-button"
            tabindex="-1"
            title="Step back"
          >
            <svg
              class="guided-answer__header__navButtons__content"
              fill="currentColor"
              focusable="false"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M7 3.093l-5 5V8.8l5 5 .707-.707-4.146-4.147H14v-1H3.56L7.708 3.8 7 3.093z"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="guided-answer__header__navButtons__content text-underline"
              style="margin-left: 3px;"
            >
              Step back
            </span>
          </button>
          <div
            class="guided-answer__header__restart-feedback-buttons"
          >
            <button
              class="guided-answer__header__navButtons"
              tabindex="-1"
              title="Feedback"
            >
              <i
                aria-hidden="true"
                class="ts-icon guided-answer__header__navButtons__content root-101"
                data-icon-name="Chat"
                style="padding-top: 2px;"
              >
                <svg
                  fill="none"
                  focusable="false"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 10H6V9H4.58578L3 10.5858V9H1V1H12V5H13V0H0V10H2V13L5 10Z"
                    fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M16 6V13H14V16L11 13H7V6H16ZM13 12V13.5858L11.4142 12H8V7H15V12H13Z"
                    fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    fill-rule="evenodd"
                  />
                </svg>
              </i>
            </button>
          </div>
        </div>
      </div>
    </div>
    <main
      class="guided-answer__container"
      id="results-container"
    >
      <div
        class="ms-Spinner root-126"
        id="loading-indicator"
      >
        <div
          class="ms-Spinner-circle ms-Spinner--large circle-127"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`<App /> Match snapshot of component <App/> with results list 1`] = `
<div>
  <div
    class="guided-answer"
  >
    <div
      class="guided-answer__header"
      style="padding-bottom: 20px;"
    >
      <div
        class="guided-answer__header__sub"
      >
        <div
          class="guided-answer__header__logoAndTitle"
        >
          <span
            id="sap-logo"
          >
            <svg />
          </span>
          <h1
            class="guided-answer__header__title"
          >
            Guided Answers
          </h1>
        </div>
        <div
          class="guided-answer__header__searchField"
        >
          <div>
            SearchField
          </div>
          <div
            id="filters"
          >
            <div
              class="ms-FocusZone css-109"
              data-focuszone-id="FocusZone18"
              style="display: flex;"
            >
              <button
                class="ms-Button ms-Button--icon filter-button root-129"
                data-is-focusable="true"
                id="filter-products"
                tabindex="0"
                title="Filter Products"
                type="button"
              >
                <span
                  class="ms-Button-flexContainer flexContainer-111"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden="true"
                    class="ms-Icon root-101 ms-Button-icon icon-130"
                    data-icon-name="Table"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M1,16 C0.44771525,16 0,15.5522847 0,15 L0,1 C0,0.44771525 0.44771525,0 1,0 L15,0 C15.5522847,0 16,0.44771525 16,1 L16,15 C16,15.5522847 15.5522847,16 15,16 L1,16 Z M5,11 L1,11 L1,15 L5,15 L5,11 Z M10,11 L6,11 L6,15 L10,15 L10,11 Z M15,11 L11,11 L11,15 L15,15 L15,11 Z M5,6 L1,6 L1,10 L5,10 L5,6 Z M10,6 L6,6 L6,10 L10,10 L10,6 Z M15,6 L11,6 L11,10 L15,10 L15,6 Z M5,1 L1,1 L1,5 L5,5 L5,1 Z M6,1 L6,5 L10,5 L10,1 L6,1 Z M11,5 L15,5 L15,1 L11,1 L11,5 Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                    </svg>
                  </i>
                </span>
              </button>
              <button
                class="ms-Button ms-Button--icon filter-button root-129"
                data-is-focusable="true"
                id="filter-components"
                tabindex="-1"
                title="Filter Components"
                type="button"
              >
                <span
                  class="ms-Button-flexContainer flexContainer-111"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden="true"
                    class="ms-Icon root-101 ms-Button-icon icon-130"
                    data-icon-name="IdTag"
                  >
                    <svg
                      fill="none"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M6 2C6 1.44772 6.44775 1 7 1H9C9.55225 1 10 1.44772 10 2V3.58578C10 3.85101 9.89465 4.10535 9.70715 4.29289L8.70715 5.29289C8.31653 5.68342 7.68347 5.68342 7.29285 5.29289L6.29285 4.29289C6.10535 4.10535 6 3.85101 6 3.58578V2ZM7 2.5C7 2.22385 7.22388 2 7.5 2H8.5C8.77612 2 9 2.22385 9 2.5C9 2.77615 8.77612 3 8.5 3H7.5C7.22388 3 7 2.77615 7 2.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M5.04333 4H1C0.447754 4 0 4.44772 0 5V14C0 14.5523 0.447754 15 1 15H15C15.5522 15 16 14.5523 16 14V5C16 4.44772 15.5522 4 15 4H10.9567C10.8771 4.37594 10.6901 4.72412 10.4142 5H15V14H1V5H5.58582C5.30994 4.72412 5.12292 4.37594 5.04333 4Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M3 7C2.44775 7 2 7.44772 2 8V11C2 11.5523 2.44775 12 3 12H5C5.55225 12 6 11.5523 6 11V8C6 7.44772 5.55225 7 5 7H3ZM5 8H3V11H5V8Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M7 7.5C7 7.22385 7.22388 7 7.5 7H13.5C13.7761 7 14 7.22385 14 7.5C14 7.77615 13.7761 8 13.5 8H7.5C7.22388 8 7 7.77615 7 7.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        d="M7 9.5C7 9.22385 7.22388 9 7.5 9H13.5C13.7761 9 14 9.22385 14 9.5C14 9.77615 13.7761 10 13.5 10H7.5C7.22388 10 7 9.77615 7 9.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        d="M11 11.5C11 11.2239 11.2239 11 11.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H11.5C11.2239 12 11 11.7761 11 11.5Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                    </svg>
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
       
    </div>
    <main
      class="guided-answer__container"
      id="results-container"
    >
      <div
        class="ms-FocusZone css-109"
        data-focuszone-id="FocusZone27"
      >
        <ul
          class="striped-list"
          role="listbox"
        >
          <div
            class="infinite-scroll-component__outerdiv"
          >
            <div
              class="infinite-scroll-component "
              style="height: auto; overflow: auto;"
            >
              <li
                class="tree-item"
                role="option"
              >
                <button
                  class="guided-answer__tree"
                  tabindex="0"
                >
                  <div
                    class="guided-answer__tree__ul"
                  >
                    <h3
                      class="guided-answer__tree__title"
                    >
                      SAP Fiori tools
                    </h3>
                    <div
                      class="bottom-section"
                    >
                      <span
                        class="guided-answer__tree__desc"
                      >
                        This is a troubleshooting guide to solve the issues while using SAP Fiori tools
                      </span>
                      <div
                        class="component-and-product-container"
                        style="margin-top: 10px;"
                      >
                        <div
                          class="guided-answer__tree__product"
                        >
                          <span
                            class="bottom-title"
                          >
                            Product: 
                          </span>
                          Product A
                        </div>
                        <div
                          class="guided-answer__tree__component"
                        >
                          <span
                            class="bottom-title"
                          >
                            Component: 
                          </span>
                          comp-a
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </li>
            </div>
          </div>
        </ul>
      </div>
    </main>
  </div>
</div>
`;
